// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EjsArticleRenderer Behavior should render article title and html 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello world</title>
  <style>
    * {
      font-family: Arial, Helvetica, sans-serif;
    }
  </style>
</head>

<body>
  <h1>foo bar</h1>
</body>

</html>"
`;

exports[`EjsArticleRenderer Behavior should render disclaimer html 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello world</title>
  <style>
    * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
      font-family: Arial, Helvetica, sans-serif;
    }

    h1 {
      margin-bottom: 16px;
    }

    p {
      text-align: left;
    }
  </style>
</head>

<body>
  <h1>foo bar</h1>

  <script>
    var height = document.body.offsetHeight;
    var width = document.body.offsetWidth;
    var dims = {
      height: height,
      width: width
    }
    window.ReactNativeWebView.postMessage(JSON.stringify(dims))
  </script>
</body>

</html>"
`;
